--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+Version 0.2.0 (2017-03-31)
+--------------------------
+Update README markdown in according with CommonMark (#14)
+Update Go version to 1.8 (#13)
+Add EMR mock to increase code coverage (#10)
+Add configurable log level (#7)
+Add support for specifying applications to install on cluster (#6)
+Add support for EBS volume attachment to instance groups (#4)
+
 Version 0.1.0 (2017-02-10)
 --------------------------
 Initial release
