--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+Version 0.4.2 (2020-02-25)
+--------------------------
+Update to go version 1.13 (#61)
+Update list of allowed emr applications (#59)
+Return error when cluster config is unparseable (#58)
+Update consul testutil dependency (#57)
+
 Version 0.4.1 (2018-12-13)
 --------------------------
 Load configuration files eagerly during run-transient (#47)
