--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Version 0.7.1 (2022-06-02)
+--------------------------
+Fix not displaying failed steps error logs (#81)
+Add steps' start/finish timestamps to log messages (#82)
+
 Version 0.7.0 (2022-03-10)
 --------------------------
 Update cluster.json sample (#70)
