--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Version 0.7.2 (2022-10-12)
+--------------------------
+Integrate Sentry (#86)
+Add go-retry and use in EMR calls (#85)
+
 Version 0.7.1 (2022-06-15)
 --------------------------
 Fix not displaying failed steps error logs (#81)
