--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Version 0.7.3 (2022-10-25)
+--------------------------
+Publish docker image (#73)
+Retry all EMR API calls (#87)
+
 Version 0.7.2 (2022-10-12)
 --------------------------
 Integrate Sentry (#86)
