--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Version 0.7.4 (2023-12-01)
+--------------------------
+Bump alpine version to 3.18.5 (#91)
+Scan Docker images in Snyk Github action (#90)
+
 Version 0.7.3 (2022-10-27)
 --------------------------
 Bump golang to 1.19.2 (#89)
