--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 0.7.5 (2024-03-25)
+--------------------------
+Add gp3 volume support (#93)
+
 Version 0.7.4 (2023-12-01)
 --------------------------
 Bump alpine version to 3.18.5 (#91)
